# esp32-rust-lilygo-t5-epaper

./: Cargo.toml  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
examples/: hello.rs
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
