[package]
name = "lily_go_t5_rs"
version = "0.3.0"
authors = ["Juraj Michalek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.18.0" }
embedded-hal = "1.0.0"
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
embedded-graphics = "0.6.2"
esp-println       = { version = "0.8.0", features = ["esp32", "log" ] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
ssd1680 = { git = "https://github.com/georgik/ssd1680.git",  rev = "b4acd756bf10baeac667150158f60013d1900f60" }

esp-wifi  = { version = "0.3.0", features = ["esp32", "wifi", "utils", "tcp", "smoltcp", "dhcpv4"] }
smoltcp = { version = "0.11.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.27.0", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
